@@ -28,7 +28,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Properties;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import io.micronaut.context.ApplicationContextConfiguration;
@@ -47,28 +46,12 @@ import io.micronaut.core.util.StringUtils;
 import io.micronaut.inject.ast.ClassElement;
 import io.micronaut.inject.visitor.VisitorContext;
 import io.micronaut.openapi.visitor.group.GroupProperties;
+import io.micronaut.openapi.visitor.group.OpenApiInfo;
 import io.micronaut.openapi.visitor.group.RouterVersioningProperties;
 import io.micronaut.openapi.visitor.security.InterceptUrlMapConverter;
 import io.micronaut.openapi.visitor.security.InterceptUrlMapPattern;
 import io.micronaut.openapi.visitor.security.SecurityProperties;
 
-import static io.micronaut.openapi.visitor.OpenApiConfigProperty.ALL;
-import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_ENVIRONMENT_ENABLED;
-import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_JACKSON_JSON_VIEW_ENABLED;
-import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_CONFIG_FILE;
-import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_ENABLED;
-import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_ENVIRONMENTS;
-import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_EXPAND_PREFIX;
-import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_GROUPS;
-import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_JSON_VIEW_DEFAULT_INCLUSION;
-import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_PROJECT_DIR;
-import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_SCHEMA;
-import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_SCHEMA_POSTFIX;
-import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_SCHEMA_PREFIX;
-import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_SECURITY_DEFAULT_SCHEMA_NAME;
-import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_SECURITY_ENABLED;
-import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_VERSIONING_ENABLED;
-import static io.micronaut.openapi.visitor.OpenApiConfigProperty.OPENAPI_CONFIG_FILE;
 import static io.micronaut.openapi.visitor.ContextProperty.MICRONAUT_INTERNAL_CUSTOM_SCHEMAS;
 import static io.micronaut.openapi.visitor.ContextProperty.MICRONAUT_INTERNAL_ENVIRONMENT;
 import static io.micronaut.openapi.visitor.ContextProperty.MICRONAUT_INTERNAL_ENVIRONMENT_CREATED;
@@ -87,7 +70,31 @@ import static io.micronaut.openapi.visitor.ContextUtils.ARGUMENT_CUSTOM_SCHEMA_M
 import static io.micronaut.openapi.visitor.ContextUtils.ARGUMENT_GROUP_PROPERTIES_MAP;
 import static io.micronaut.openapi.visitor.ContextUtils.ARGUMENT_SCHEMA_DECORATORS_MAP;
 import static io.micronaut.openapi.visitor.ContextUtils.EXPANDABLE_PROPERTIES_ARGUMENT;
+import static io.micronaut.openapi.visitor.FileUtils.calcFinalFilename;
 import static io.micronaut.openapi.visitor.FileUtils.resolve;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.ALL;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_ENVIRONMENT_ENABLED;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_JACKSON_JSON_VIEW_ENABLED;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_ADOC_OPENAPI_PATH;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_ADOC_OUTPUT_DIR_PATH;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_ADOC_OUTPUT_FILENAME;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_ADOC_TEMPLATES_DIR_PATH;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_ADOC_TEMPLATE_FILENAME;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_ADOC_TEMPLATE_PREFIX;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_CONFIG_FILE;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_ENABLED;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_ENVIRONMENTS;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_EXPAND_PREFIX;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_GROUPS;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_JSON_VIEW_DEFAULT_INCLUSION;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_PROJECT_DIR;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_SCHEMA;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_SCHEMA_POSTFIX;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_SCHEMA_PREFIX;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_SECURITY_DEFAULT_SCHEMA_NAME;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_SECURITY_ENABLED;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.MICRONAUT_OPENAPI_VERSIONING_ENABLED;
+import static io.micronaut.openapi.visitor.OpenApiConfigProperty.OPENAPI_CONFIG_FILE;
 import static io.micronaut.openapi.visitor.group.RouterVersioningProperties.DEFAULT_HEADER_NAME;
 import static io.micronaut.openapi.visitor.group.RouterVersioningProperties.DEFAULT_PARAMETER_NAME;
 
@@ -244,12 +251,12 @@ public final class ConfigUtils {
 
         List<Pair<String, String>> expandableProperties = new ArrayList<>();
 
-        // first, check system properties and environmets config files
+        // first, check system properties and environments config files
         AnnProcessorEnvironment env = (AnnProcessorEnvironment) getEnv(context);
         Map<String, Object> propertiesFromEnv = null;
         if (env != null) {
             try {
-                propertiesFromEnv = env.getProperties("micronaut.openapi.expand", null);
+                propertiesFromEnv = env.getProperties(MICRONAUT_OPENAPI_EXPAND_PREFIX.substring(0, MICRONAUT_OPENAPI_EXPAND_PREFIX.length() - 1), null);
             } catch (Exception e) {
                 context.warn("Error:\n" + Utils.printStackTrace(e), null);
             }
@@ -300,6 +307,59 @@ public final class ConfigUtils {
         return expandableProperties;
     }
 
+    public static Map<String, String> getAdocProperties(OpenApiInfo openApiInfo, boolean isSingleGroup, VisitorContext context) {
+
+        var adocProperties = new HashMap<String, String>();
+        adocProperties.put(MICRONAUT_OPENAPI_ADOC_TEMPLATES_DIR_PATH, getConfigProperty(MICRONAUT_OPENAPI_ADOC_TEMPLATES_DIR_PATH, context));
+        adocProperties.put(MICRONAUT_OPENAPI_ADOC_TEMPLATE_FILENAME, getConfigProperty(MICRONAUT_OPENAPI_ADOC_TEMPLATE_FILENAME, context));
+        adocProperties.put(MICRONAUT_OPENAPI_ADOC_OUTPUT_DIR_PATH, getConfigProperty(MICRONAUT_OPENAPI_ADOC_OUTPUT_DIR_PATH, context));
+        adocProperties.put(MICRONAUT_OPENAPI_ADOC_OUTPUT_FILENAME, getConfigProperty(MICRONAUT_OPENAPI_ADOC_OUTPUT_FILENAME, context));
+        adocProperties.put(MICRONAUT_OPENAPI_ADOC_OPENAPI_PATH, getConfigProperty(MICRONAUT_OPENAPI_ADOC_OPENAPI_PATH, context));
+
+        // first, check system properties and environments config files
+        var env = (AnnProcessorEnvironment) getEnv(context);
+        Map<String, Object> propertiesFromEnv = null;
+        if (env != null) {
+            try {
+                propertiesFromEnv = env.getProperties(MICRONAUT_OPENAPI_ADOC_TEMPLATE_PREFIX.substring(0, MICRONAUT_OPENAPI_ADOC_TEMPLATE_PREFIX.length() - 1), null);
+            } catch (Exception e) {
+                context.warn("Error:\n" + Utils.printStackTrace(e), null);
+            }
+        }
+
+        if (CollectionUtils.isNotEmpty(propertiesFromEnv)) {
+            for (var entry : propertiesFromEnv.entrySet()) {
+                adocProperties.put(entry.getKey(), entry.getValue().toString());
+            }
+        }
+
+        // next, read openapi.properties file
+        Properties openapiProps = readOpenApiConfigFile(context);
+        for (Map.Entry<Object, Object> entry : openapiProps.entrySet()) {
+            String key = entry.getKey().toString();
+            if (!key.startsWith(MICRONAUT_OPENAPI_EXPAND_PREFIX)) {
+                continue;
+            }
+            adocProperties.put(key, entry.getValue().toString());
+        }
+
+        // next, read system properties
+        if (CollectionUtils.isNotEmpty(System.getProperties())) {
+            for (Map.Entry<Object, Object> entry : System.getProperties().entrySet()) {
+                String key = entry.getKey().toString();
+                if (!key.startsWith(MICRONAUT_OPENAPI_EXPAND_PREFIX)) {
+                    continue;
+                }
+                adocProperties.put(key, entry.getValue().toString());
+            }
+        }
+
+        var fileName = StringUtils.isNotEmpty(openApiInfo.getAdocFilename()) ? openApiInfo.getAdocFilename() : adocProperties.get(MICRONAUT_OPENAPI_ADOC_OUTPUT_FILENAME);
+        var titleAndFilename = calcFinalFilename(openApiInfo.getAdocFilename(), openApiInfo, isSingleGroup, "adoc", context);
+
+        return adocProperties;
+    }
+
     public static boolean isJsonViewEnabled(VisitorContext context) {
 
         Boolean isJsonViewEnabled = context.get(MICRONAUT_INTERNAL_JACKSON_JSON_VIEW_ENABLED, Boolean.class).orElse(null);
@@ -333,7 +393,7 @@ public final class ConfigUtils {
             return securityProperties;
         }
 
-        // load micronaut security properies
+        // load micronaut security properties
         Environment environment = getEnv(context);
         List<InterceptUrlMapPattern> interceptUrlMapPatterns;
         if (environment != null) {
@@ -350,16 +410,16 @@ public final class ConfigUtils {
         boolean tokenEnabled = getBooleanProperty("micronaut.security.token.enabled", false, context);
 
         securityProperties = new SecurityProperties(
-                getBooleanProperty(MICRONAUT_OPENAPI_SECURITY_ENABLED, true, context),
-                getBooleanProperty("micronaut.security.enabled", false, context),
-                defaultSchemaName,
-                interceptUrlMapPatterns,
-                tokenEnabled,
-                getBooleanProperty("micronaut.security.token.jwt.enabled", tokenEnabled, context),
-                getBooleanProperty("micronaut.security.token.jwt.bearer", tokenEnabled, context),
-                getBooleanProperty("micronaut.security.token.jwt.cookie.enabled", false, context),
-                getBooleanProperty("micronaut.security.oauth2.enabled", false, context),
-                getBooleanProperty("micronaut.security.basic-auth.enabled", false, context)
+            getBooleanProperty(MICRONAUT_OPENAPI_SECURITY_ENABLED, true, context),
+            getBooleanProperty("micronaut.security.enabled", false, context),
+            defaultSchemaName,
+            interceptUrlMapPatterns,
+            tokenEnabled,
+            getBooleanProperty("micronaut.security.token.jwt.enabled", tokenEnabled, context),
+            getBooleanProperty("micronaut.security.token.jwt.bearer", tokenEnabled, context),
+            getBooleanProperty("micronaut.security.token.jwt.cookie.enabled", false, context),
+            getBooleanProperty("micronaut.security.oauth2.enabled", false, context),
+            getBooleanProperty("micronaut.security.basic-auth.enabled", false, context)
         );
 
         context.put(MICRONAUT_INTERNAL_SECURITY_PROPERTIES, securityProperties);
@@ -375,12 +435,12 @@ public final class ConfigUtils {
         }
 
         routerVersioningProperties = new RouterVersioningProperties(
-                getBooleanProperty(MICRONAUT_OPENAPI_VERSIONING_ENABLED, true, context),
-                getBooleanProperty("micronaut.router.versioning.enabled", false, context),
-                getBooleanProperty("micronaut.router.versioning.header.enabled", false, context),
-                getListStringsProperty("micronaut.router.versioning.header.names", Collections.singletonList(DEFAULT_HEADER_NAME), context),
-                getBooleanProperty("micronaut.router.versioning.parameter.enabled", false, context),
-                getListStringsProperty("micronaut.router.versioning.parameter.names", Collections.singletonList(DEFAULT_PARAMETER_NAME), context)
+            getBooleanProperty(MICRONAUT_OPENAPI_VERSIONING_ENABLED, true, context),
+            getBooleanProperty("micronaut.router.versioning.enabled", false, context),
+            getBooleanProperty("micronaut.router.versioning.header.enabled", false, context),
+            getListStringsProperty("micronaut.router.versioning.header.names", Collections.singletonList(DEFAULT_HEADER_NAME), context),
+            getBooleanProperty("micronaut.router.versioning.parameter.enabled", false, context),
+            getListStringsProperty("micronaut.router.versioning.parameter.names", Collections.singletonList(DEFAULT_PARAMETER_NAME), context)
         );
 
         context.put(MICRONAUT_INTERNAL_ROUTER_VERSIONING_PROPERTIES, routerVersioningProperties);
@@ -418,6 +478,9 @@ public final class ConfigUtils {
 
     public static Map<String, GroupProperties> getGroupsPropertiesMap(VisitorContext context) {
 
+        if (context == null) {
+            return Collections.emptyMap();
+        }
         Map<String, GroupProperties> groupPropertiesMap = context.get(MICRONAUT_INTERNAL_GROUPS, ARGUMENT_GROUP_PROPERTIES_MAP).orElse(null);
         if (groupPropertiesMap != null) {
             return groupPropertiesMap;
@@ -464,7 +527,7 @@ public final class ConfigUtils {
         if (cfg.isPresent()) {
             return cfg.get();
         }
-        EndpointsConfiguration conf = new EndpointsConfiguration(context, readOpenApiConfigFile(context));
+        var conf = new EndpointsConfiguration(context, readOpenApiConfigFile(context));
         context.put(MICRONAUT_INTERNAL_ENVIRONMENT_CREATED, conf);
         return conf;
     }
@@ -482,7 +545,7 @@ public final class ConfigUtils {
             String groupName = prop.substring(MICRONAUT_OPENAPI_GROUPS.length() + 1, groupNameIndexEnd);
             String propertyName = prop.substring(groupNameIndexEnd + 1);
             String value = props.getProperty(prop);
-            setGroupProperty(groupName, prop, value, groupPropertiesMap, context);
+            setGroupProperty(groupName, propertyName, value, groupPropertiesMap, context);
         }
     }
 
@@ -493,16 +556,24 @@ public final class ConfigUtils {
         String valueStr = value.toString();
         GroupProperties groupProperties = groupPropertiesMap.computeIfAbsent(groupName, GroupProperties::new);
         switch (propertyName.toLowerCase()) {
-            case "display-name":
-            case "displayname":
+            case "display-name", "displayname":
                 if (groupProperties.getDisplayName() == null) {
                     groupProperties.setDisplayName(valueStr);
                 }
                 break;
-            case "file-name":
-            case "filename":
+            case "file-name", "filename":
                 if (groupProperties.getFilename() == null) {
                     groupProperties.setFilename(valueStr);
+                }
+                break;
+            case "adoc-file-name", "adocfilename":
+                if (groupProperties.getAdocFilename() == null) {
+                    groupProperties.setAdocFilename(valueStr);
+                }
+                break;
+            case "adoc-enabled", "adocenabled":
+                if (groupProperties.getAdocEnabled() == null) {
+                    groupProperties.setAdocEnabled(Boolean.valueOf(valueStr));
                 }
                 break;
             case "packages":
@@ -519,14 +590,12 @@ public final class ConfigUtils {
                     groupProperties.setPrimary(Boolean.valueOf(valueStr));
                 }
                 break;
-            case "commonexclude":
-            case "common-exclude":
+            case "commonexclude", "common-exclude":
                 if (groupProperties.getCommonExclude() == null) {
                     groupProperties.setCommonExclude(Boolean.valueOf(valueStr));
                 }
                 break;
-            case "packagesexclude":
-            case "packages-exclude":
+            case "packagesexclude", "packages-exclude":
                 if (groupProperties.getPackagesExclude() == null) {
                     List<GroupProperties.PackageProperties> packagesExclude = new ArrayList<>();
                     for (String groupPackage : valueStr.split(",")) {
@@ -788,10 +857,10 @@ public final class ConfigUtils {
         List<String> activeEnvs;
         if (StringUtils.isNotEmpty(activeEnvStr)) {
             activeEnvs = Stream.of(activeEnvStr)
-                    .filter(StringUtils::isNotEmpty)
-                    .flatMap(s -> Arrays.stream(s.split(",")))
-                    .map(String::trim)
-                    .collect(Collectors.toList());
+                .filter(StringUtils::isNotEmpty)
+                .flatMap(s -> Arrays.stream(s.split(",")))
+                .map(String::trim)
+                .toList();
         } else {
             activeEnvs = new ArrayList<>();
         }
@@ -835,7 +904,10 @@ public final class ConfigUtils {
         }
     }
 
-    static final class SchemaDecorator {
+    /**
+     * Information about decorator.
+     */
+    public static final class SchemaDecorator {
 
         private String prefix;
         private String postfix;
